parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     n_seen_type -> <empty>
Rule 2     n_open_new_scope -> <empty>
Rule 3     n_open_new_scope_function -> <empty>
Rule 4     n_close_scope -> <empty>
Rule 5     n_variable_reference -> <empty>
Rule 6     n_variable_instantiate -> <empty>
Rule 7     n_variable_instantiate_param -> <empty>
Rule 8     n_math_expression_1_int -> <empty>
Rule 9     n_math_expression_1_float -> <empty>
Rule 10    n_math_expression_1_string -> <empty>
Rule 11    n_math_expression_1_bool -> <empty>
Rule 12    n_math_expression_1_name -> <empty>
Rule 13    n_math_expression_2 -> <empty>
Rule 14    n_math_expression_3 -> <empty>
Rule 15    n_math_expression_4 -> <empty>
Rule 16    n_math_expression_5 -> <empty>
Rule 17    n_math_expression_6 -> <empty>
Rule 18    n_math_expression_7 -> <empty>
Rule 19    n_math_expression_8 -> <empty>
Rule 20    n_math_expression_9 -> <empty>
Rule 21    n_math_expression_10 -> <empty>
Rule 22    n_math_expression_11 -> <empty>
Rule 23    n_math_expression_12 -> <empty>
Rule 24    n_two_way_conditional_1 -> <empty>
Rule 25    n_two_way_conditional_2 -> <empty>
Rule 26    n_two_way_conditional_3 -> <empty>
Rule 27    p_n_pre_condition_loop_1 -> <empty>
Rule 28    p_n_pre_condition_loop_2 -> <empty>
Rule 29    p_n_pre_condition_loop_3 -> <empty>
Rule 30    n_seen_equal_op -> <empty>
Rule 31    n_before_function_definition -> <empty>
Rule 32    n_function_block_start -> <empty>
Rule 33    n_function_block_end -> <empty>
Rule 34    n_function_type -> <empty>
Rule 35    n_function_call_1 -> <empty>
Rule 36    n_function_call_2 -> <empty>
Rule 37    n_function_call_3 -> <empty>
Rule 38    n_function_call_4 -> <empty>
Rule 39    n_function_call_5 -> <empty>
Rule 40    n_function_call_6 -> <empty>
Rule 41    n_return -> <empty>
Rule 42    n_return_void -> <empty>
Rule 43    n_print -> <empty>
Rule 44    n_input_string -> <empty>
Rule 45    n_input_int -> <empty>
Rule 46    n_input_float -> <empty>
Rule 47    n_arr_reference -> <empty>
Rule 48    n_matrix_reference -> <empty>
Rule 49    n_arr_instantiate_name -> <empty>
Rule 50    n_arr_reference_name -> <empty>
Rule 51    n_arr_instantiate_size -> <empty>
Rule 52    n_arr_instantiate -> <empty>
Rule 53    n_matrix_instantiate -> <empty>
Rule 54    n_left_bracket -> <empty>
Rule 55    n_right_bracket -> <empty>
Rule 56    n_end -> <empty>
Rule 57    empty -> <empty>
Rule 58    program -> program_aux codeblock n_end
Rule 59    program_aux -> IDK
Rule 60    program_aux -> OWO
Rule 61    type -> INT_TYPE n_seen_type
Rule 62    type -> STRING_TYPE n_seen_type
Rule 63    type -> DOUBLE_TYPE n_seen_type
Rule 64    type -> FLOAT_TYPE n_seen_type
Rule 65    type -> BOOL_TYPE n_seen_type
Rule 66    relational_operator -> GREATERTHAN n_math_expression_8
Rule 67    relational_operator -> LESSTHAN n_math_expression_8
Rule 68    relational_operator -> EQUALEQUAL n_math_expression_8
Rule 69    relational_operator -> LESSTHANOREQUAL n_math_expression_8
Rule 70    relational_operator -> GREATERTHANOREQUAL n_math_expression_8
Rule 71    relational_operator -> NOTEQUAL n_math_expression_8
Rule 72    literal -> FLOAT n_math_expression_1_float
Rule 73    literal -> INT n_math_expression_1_int
Rule 74    literal -> STRING n_math_expression_1_string
Rule 75    literal -> TRUE n_math_expression_1_bool
Rule 76    literal -> FALSE n_math_expression_1_bool
Rule 77    function_type -> VOID n_function_type
Rule 78    function_type -> INT_TYPE n_function_type
Rule 79    function_type -> STRING_TYPE n_function_type
Rule 80    function_type -> DOUBLE_TYPE n_function_type
Rule 81    function_type -> FLOAT_TYPE n_function_type
Rule 82    function_type -> BOOL_TYPE n_function_type
Rule 83    function_definition -> n_before_function_definition FUNCTION NAME n_open_new_scope_function parameter_list DOUBLEDOT function_type LCURLY n_function_block_start codeblock RCURLY n_close_scope n_function_block_end
Rule 84    return -> RETURN expression n_return SEMICOLON
Rule 85    return -> RETURN n_return_void SEMICOLON
Rule 86    function_call -> NAME n_function_call_1 LPARENTHESIS n_function_call_2 arg_list RPARENTHESIS n_function_call_5 n_function_call_6
Rule 87    function_call -> NAME n_function_call_1 LPARENTHESIS RPARENTHESIS n_function_call_6
Rule 88    arg_list -> arg
Rule 89    arg_list -> arg COMMA n_function_call_4 arg_list
Rule 90    parameter_list -> empty
Rule 91    parameter_list -> parameter
Rule 92    parameter_list -> parameter COMMA parameter_list
Rule 93    arg -> expression n_function_call_3
Rule 94    parameter -> type NAME n_variable_instantiate_param
Rule 95    expression -> expression_or
Rule 96    expression -> expression_or AND n_math_expression_10 expression n_math_expression_11
Rule 97    expression_or -> expression_rel
Rule 98    expression_or -> expression_rel OR n_math_expression_10 expression_or n_math_expression_12
Rule 99    expression_rel -> exp
Rule 100   expression_rel -> exp relational_operator exp n_math_expression_9
Rule 101   exp -> termino n_math_expression_4
Rule 102   exp -> termino n_math_expression_4 PLUS n_math_expression_2 exp
Rule 103   exp -> termino n_math_expression_4 MINUS n_math_expression_2 exp
Rule 104   termino -> factor n_math_expression_5
Rule 105   termino -> factor n_math_expression_5 TIMES n_math_expression_3 termino
Rule 106   termino -> factor n_math_expression_5 DIVIDE n_math_expression_3 termino
Rule 107   termino -> factor n_math_expression_5 MODULUS n_math_expression_3 termino
Rule 108   factor -> LPARENTHESIS n_math_expression_6 expression RPARENTHESIS n_math_expression_7
Rule 109   factor -> PLUS value
Rule 110   factor -> MINUS value
Rule 111   factor -> value
Rule 112   input -> INPUTSTRING LPARENTHESIS RPARENTHESIS n_input_string
Rule 113   input -> INPUTINT LPARENTHESIS RPARENTHESIS n_input_int
Rule 114   input -> INPUTFLOAT LPARENTHESIS RPARENTHESIS n_input_float
Rule 115   value -> function_call
Rule 116   value -> literal
Rule 117   value -> reference
Rule 118   value -> input
Rule 119   reference -> NAME n_variable_reference n_math_expression_1_name
Rule 120   reference -> arr_reference
Rule 121   arr_reference -> NAME n_arr_reference_name LBRACKET n_left_bracket expression RBRACKET n_right_bracket n_arr_reference
Rule 122   arr_reference -> NAME n_arr_reference_name LBRACKET n_left_bracket expression RBRACKET n_right_bracket LBRACKET n_left_bracket expression RBRACKET n_right_bracket n_matrix_reference
Rule 123   declare -> type NAME n_variable_instantiate
Rule 124   declare -> type NAME n_arr_instantiate_name LBRACKET INT n_arr_instantiate_size RBRACKET n_arr_instantiate
Rule 125   declare -> type NAME n_arr_instantiate_name LBRACKET INT n_arr_instantiate_size RBRACKET LBRACKET INT n_arr_instantiate_size RBRACKET n_matrix_instantiate
Rule 126   assign -> type NAME n_variable_instantiate n_math_expression_1_name EQUAL n_seen_equal_op expression
Rule 127   assign -> reference EQUAL n_seen_equal_op expression
Rule 128   print -> PRINT LPARENTHESIS expression n_print RPARENTHESIS
Rule 129   statement -> statement_aux SEMICOLON
Rule 130   statement_aux -> assign
Rule 131   statement_aux -> declare
Rule 132   statement_aux -> function_call
Rule 133   statement_aux -> print
Rule 134   codeblock -> empty
Rule 135   codeblock -> codeblock_aux codeblock
Rule 136   codeblock_aux -> statement
Rule 137   codeblock_aux -> function_definition
Rule 138   codeblock_aux -> condition_if
Rule 139   codeblock_aux -> loop
Rule 140   codeblock_aux -> return
Rule 141   loop -> whileloop
Rule 142   whileloop -> WHILE p_n_pre_condition_loop_1 LPARENTHESIS expression RPARENTHESIS p_n_pre_condition_loop_2 LCURLY n_open_new_scope codeblock RCURLY p_n_pre_condition_loop_3 n_close_scope
Rule 143   condition_if -> IF LPARENTHESIS expression RPARENTHESIS LCURLY n_two_way_conditional_1 n_open_new_scope codeblock RCURLY n_close_scope condition_else n_two_way_conditional_2
Rule 144   condition_else -> ELSE n_two_way_conditional_3 LCURLY n_open_new_scope codeblock RCURLY n_close_scope
Rule 145   condition_else -> empty

Terminals, with rules where they appear

AND                  : 96
BOOL_TYPE            : 65 82
COMMA                : 89 92
DIVIDE               : 106
DOUBLEDOT            : 83
DOUBLE_TYPE          : 63 80
ELSE                 : 144
EQUAL                : 126 127
EQUALEQUAL           : 68
FALSE                : 76
FLOAT                : 72
FLOAT_TYPE           : 64 81
FUNCTION             : 83
GREATERTHAN          : 66
GREATERTHANOREQUAL   : 70
IDK                  : 59
IF                   : 143
INPUTFLOAT           : 114
INPUTINT             : 113
INPUTSTRING          : 112
INT                  : 73 124 125 125
INT_TYPE             : 61 78
LBRACKET             : 121 122 122 124 125 125
LCURLY               : 83 142 143 144
LESSTHAN             : 67
LESSTHANOREQUAL      : 69
LPARENTHESIS         : 86 87 108 112 113 114 128 142 143
MINUS                : 103 110
MODULUS              : 107
NAME                 : 83 86 87 94 119 121 122 123 124 125 126
NOTEQUAL             : 71
OR                   : 98
OWO                  : 60
PLUS                 : 102 109
PRINT                : 128
RBRACKET             : 121 122 122 124 125 125
RCURLY               : 83 142 143 144
RETURN               : 84 85
RPARENTHESIS         : 86 87 108 112 113 114 128 142 143
SEMICOLON            : 84 85 129
STRING               : 74
STRING_TYPE          : 62 79
TIMES                : 105
TRUE                 : 75
VOID                 : 77
WHILE                : 142
error                : 

Nonterminals, with rules where they appear

arg                  : 88 89
arg_list             : 86 89
arr_reference        : 120
assign               : 130
codeblock            : 58 83 135 142 143 144
codeblock_aux        : 135
condition_else       : 143
condition_if         : 138
declare              : 131
empty                : 90 134 145
exp                  : 99 100 100 102 103
expression           : 84 93 96 108 121 122 122 126 127 128 142 143
expression_or        : 95 96 98
expression_rel       : 97 98
factor               : 104 105 106 107
function_call        : 115 132
function_definition  : 137
function_type        : 83
input                : 118
literal              : 116
loop                 : 139
n_arr_instantiate    : 124
n_arr_instantiate_name : 124 125
n_arr_instantiate_size : 124 125 125
n_arr_reference      : 121
n_arr_reference_name : 121 122
n_before_function_definition : 83
n_close_scope        : 83 142 143 144
n_end                : 58
n_function_block_end : 83
n_function_block_start : 83
n_function_call_1    : 86 87
n_function_call_2    : 86
n_function_call_3    : 93
n_function_call_4    : 89
n_function_call_5    : 86
n_function_call_6    : 86 87
n_function_type      : 77 78 79 80 81 82
n_input_float        : 114
n_input_int          : 113
n_input_string       : 112
n_left_bracket       : 121 122 122
n_math_expression_10 : 96 98
n_math_expression_11 : 96
n_math_expression_12 : 98
n_math_expression_1_bool : 75 76
n_math_expression_1_float : 72
n_math_expression_1_int : 73
n_math_expression_1_name : 119 126
n_math_expression_1_string : 74
n_math_expression_2  : 102 103
n_math_expression_3  : 105 106 107
n_math_expression_4  : 101 102 103
n_math_expression_5  : 104 105 106 107
n_math_expression_6  : 108
n_math_expression_7  : 108
n_math_expression_8  : 66 67 68 69 70 71
n_math_expression_9  : 100
n_matrix_instantiate : 125
n_matrix_reference   : 122
n_open_new_scope     : 142 143 144
n_open_new_scope_function : 83
n_print              : 128
n_return             : 84
n_return_void        : 85
n_right_bracket      : 121 122 122
n_seen_equal_op      : 126 127
n_seen_type          : 61 62 63 64 65
n_two_way_conditional_1 : 143
n_two_way_conditional_2 : 143
n_two_way_conditional_3 : 144
n_variable_instantiate : 123 126
n_variable_instantiate_param : 94
n_variable_reference : 119
p_n_pre_condition_loop_1 : 142
p_n_pre_condition_loop_2 : 142
p_n_pre_condition_loop_3 : 142
parameter            : 91 92
parameter_list       : 83 92
print                : 133
program              : 0
program_aux          : 58
reference            : 117 127
relational_operator  : 100
return               : 140
statement            : 136
statement_aux        : 129
termino              : 101 102 103 105 106 107
type                 : 94 123 124 125 126
value                : 109 110 111
whileloop            : 141

Parsing method: LALR

state 0

    (0) S' -> . program
    (58) program -> . program_aux codeblock n_end
    (59) program_aux -> . IDK
    (60) program_aux -> . OWO

    IDK             shift and go to state 3
    OWO             shift and go to state 4

    program                        shift and go to state 1
    program_aux                    shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (58) program -> program_aux . codeblock n_end
    (134) codeblock -> . empty
    (135) codeblock -> . codeblock_aux codeblock
    (57) empty -> .
    (136) codeblock_aux -> . statement
    (137) codeblock_aux -> . function_definition
    (138) codeblock_aux -> . condition_if
    (139) codeblock_aux -> . loop
    (140) codeblock_aux -> . return
    (129) statement -> . statement_aux SEMICOLON
    (83) function_definition -> . n_before_function_definition FUNCTION NAME n_open_new_scope_function parameter_list DOUBLEDOT function_type LCURLY n_function_block_start codeblock RCURLY n_close_scope n_function_block_end
    (143) condition_if -> . IF LPARENTHESIS expression RPARENTHESIS LCURLY n_two_way_conditional_1 n_open_new_scope codeblock RCURLY n_close_scope condition_else n_two_way_conditional_2
    (141) loop -> . whileloop
    (84) return -> . RETURN expression n_return SEMICOLON
    (85) return -> . RETURN n_return_void SEMICOLON
    (130) statement_aux -> . assign
    (131) statement_aux -> . declare
    (132) statement_aux -> . function_call
    (133) statement_aux -> . print
    (31) n_before_function_definition -> .
    (142) whileloop -> . WHILE p_n_pre_condition_loop_1 LPARENTHESIS expression RPARENTHESIS p_n_pre_condition_loop_2 LCURLY n_open_new_scope codeblock RCURLY p_n_pre_condition_loop_3 n_close_scope
    (126) assign -> . type NAME n_variable_instantiate n_math_expression_1_name EQUAL n_seen_equal_op expression
    (127) assign -> . reference EQUAL n_seen_equal_op expression
    (123) declare -> . type NAME n_variable_instantiate
    (124) declare -> . type NAME n_arr_instantiate_name LBRACKET INT n_arr_instantiate_size RBRACKET n_arr_instantiate
    (125) declare -> . type NAME n_arr_instantiate_name LBRACKET INT n_arr_instantiate_size RBRACKET LBRACKET INT n_arr_instantiate_size RBRACKET n_matrix_instantiate
    (86) function_call -> . NAME n_function_call_1 LPARENTHESIS n_function_call_2 arg_list RPARENTHESIS n_function_call_5 n_function_call_6
    (87) function_call -> . NAME n_function_call_1 LPARENTHESIS RPARENTHESIS n_function_call_6
    (128) print -> . PRINT LPARENTHESIS expression n_print RPARENTHESIS
    (61) type -> . INT_TYPE n_seen_type
    (62) type -> . STRING_TYPE n_seen_type
    (63) type -> . DOUBLE_TYPE n_seen_type
    (64) type -> . FLOAT_TYPE n_seen_type
    (65) type -> . BOOL_TYPE n_seen_type
    (119) reference -> . NAME n_variable_reference n_math_expression_1_name
    (120) reference -> . arr_reference
    (121) arr_reference -> . NAME n_arr_reference_name LBRACKET n_left_bracket expression RBRACKET n_right_bracket n_arr_reference
    (122) arr_reference -> . NAME n_arr_reference_name LBRACKET n_left_bracket expression RBRACKET n_right_bracket LBRACKET n_left_bracket expression RBRACKET n_right_bracket n_matrix_reference

    $end            reduce using rule 57 (empty -> .)
    IF              shift and go to state 16
    RETURN          shift and go to state 18
    FUNCTION        reduce using rule 31 (n_before_function_definition -> .)
    WHILE           shift and go to state 23
    NAME            shift and go to state 15
    PRINT           shift and go to state 26
    INT_TYPE        shift and go to state 27
    STRING_TYPE     shift and go to state 28
    DOUBLE_TYPE     shift and go to state 29
    FLOAT_TYPE      shift and go to state 30
    BOOL_TYPE       shift and go to state 31

    codeblock                      shift and go to state 5
    empty                          shift and go to state 6
    codeblock_aux                  shift and go to state 7
    statement                      shift and go to state 8
    function_definition            shift and go to state 9
    condition_if                   shift and go to state 10
    loop                           shift and go to state 11
    return                         shift and go to state 12
    statement_aux                  shift and go to state 13
    n_before_function_definition   shift and go to state 14
    whileloop                      shift and go to state 17
    assign                         shift and go to state 19
    declare                        shift and go to state 20
    function_call                  shift and go to state 21
    print                          shift and go to state 22
    type                           shift and go to state 24
    reference                      shift and go to state 25
    arr_reference                  shift and go to state 32

state 3

    (59) program_aux -> IDK .

    IF              reduce using rule 59 (program_aux -> IDK .)
    RETURN          reduce using rule 59 (program_aux -> IDK .)
    WHILE           reduce using rule 59 (program_aux -> IDK .)
    NAME            reduce using rule 59 (program_aux -> IDK .)
    PRINT           reduce using rule 59 (program_aux -> IDK .)
    INT_TYPE        reduce using rule 59 (program_aux -> IDK .)
    STRING_TYPE     reduce using rule 59 (program_aux -> IDK .)
    DOUBLE_TYPE     reduce using rule 59 (program_aux -> IDK .)
    FLOAT_TYPE      reduce using rule 59 (program_aux -> IDK .)
    BOOL_TYPE       reduce using rule 59 (program_aux -> IDK .)
    FUNCTION        reduce using rule 59 (program_aux -> IDK .)
    $end            reduce using rule 59 (program_aux -> IDK .)


state 4

    (60) program_aux -> OWO .

    IF              reduce using rule 60 (program_aux -> OWO .)
    RETURN          reduce using rule 60 (program_aux -> OWO .)
    WHILE           reduce using rule 60 (program_aux -> OWO .)
    NAME            reduce using rule 60 (program_aux -> OWO .)
    PRINT           reduce using rule 60 (program_aux -> OWO .)
    INT_TYPE        reduce using rule 60 (program_aux -> OWO .)
    STRING_TYPE     reduce using rule 60 (program_aux -> OWO .)
    DOUBLE_TYPE     reduce using rule 60 (program_aux -> OWO .)
    FLOAT_TYPE      reduce using rule 60 (program_aux -> OWO .)
    BOOL_TYPE       reduce using rule 60 (program_aux -> OWO .)
    FUNCTION        reduce using rule 60 (program_aux -> OWO .)
    $end            reduce using rule 60 (program_aux -> OWO .)


state 5

    (58) program -> program_aux codeblock . n_end
    (56) n_end -> .

    $end            reduce using rule 56 (n_end -> .)

    n_end                          shift and go to state 33

state 6

    (134) codeblock -> empty .

    $end            reduce using rule 134 (codeblock -> empty .)
    RCURLY          reduce using rule 134 (codeblock -> empty .)


state 7

    (135) codeblock -> codeblock_aux . codeblock
    (134) codeblock -> . empty
    (135) codeblock -> . codeblock_aux codeblock
    (57) empty -> .
    (136) codeblock_aux -> . statement
    (137) codeblock_aux -> . function_definition
    (138) codeblock_aux -> . condition_if
    (139) codeblock_aux -> . loop
    (140) codeblock_aux -> . return
    (129) statement -> . statement_aux SEMICOLON
    (83) function_definition -> . n_before_function_definition FUNCTION NAME n_open_new_scope_function parameter_list DOUBLEDOT function_type LCURLY n_function_block_start codeblock RCURLY n_close_scope n_function_block_end
    (143) condition_if -> . IF LPARENTHESIS expression RPARENTHESIS LCURLY n_two_way_conditional_1 n_open_new_scope codeblock RCURLY n_close_scope condition_else n_two_way_conditional_2
    (141) loop -> . whileloop
    (84) return -> . RETURN expression n_return SEMICOLON
    (85) return -> . RETURN n_return_void SEMICOLON
    (130) statement_aux -> . assign
    (131) statement_aux -> . declare
    (132) statement_aux -> . function_call
    (133) statement_aux -> . print
    (31) n_before_function_definition -> .
    (142) whileloop -> . WHILE p_n_pre_condition_loop_1 LPARENTHESIS expression RPARENTHESIS p_n_pre_condition_loop_2 LCURLY n_open_new_scope codeblock RCURLY p_n_pre_condition_loop_3 n_close_scope
    (126) assign -> . type NAME n_variable_instantiate n_math_expression_1_name EQUAL n_seen_equal_op expression
    (127) assign -> . reference EQUAL n_seen_equal_op expression
    (123) declare -> . type NAME n_variable_instantiate
    (124) declare -> . type NAME n_arr_instantiate_name LBRACKET INT n_arr_instantiate_size RBRACKET n_arr_instantiate
    (125) declare -> . type NAME n_arr_instantiate_name LBRACKET INT n_arr_instantiate_size RBRACKET LBRACKET INT n_arr_instantiate_size RBRACKET n_matrix_instantiate
    (86) function_call -> . NAME n_function_call_1 LPARENTHESIS n_function_call_2 arg_list RPARENTHESIS n_function_call_5 n_function_call_6
    (87) function_call -> . NAME n_function_call_1 LPARENTHESIS RPARENTHESIS n_function_call_6
    (128) print -> . PRINT LPARENTHESIS expression n_print RPARENTHESIS
    (61) type -> . INT_TYPE n_seen_type
    (62) type -> . STRING_TYPE n_seen_type
    (63) type -> . DOUBLE_TYPE n_seen_type
    (64) type -> . FLOAT_TYPE n_seen_type
    (65) type -> . BOOL_TYPE n_seen_type
    (119) reference -> . NAME n_variable_reference n_math_expression_1_name
    (120) reference -> . arr_reference
    (121) arr_reference -> . NAME n_arr_reference_name LBRACKET n_left_bracket expression RBRACKET n_right_bracket n_arr_reference
    (122) arr_reference -> . NAME n_arr_reference_name LBRACKET n_left_bracket expression RBRACKET n_right_bracket LBRACKET n_left_bracket expression RBRACKET n_right_bracket n_matrix_reference

    $end            reduce using rule 57 (empty -> .)
    RCURLY          reduce using rule 57 (empty -> .)
    IF              shift and go to state 16
    RETURN          shift and go to state 18
    FUNCTION        reduce using rule 31 (n_before_function_definition -> .)
    WHILE           shift and go to state 23
    NAME            shift and go to state 15
    PRINT           shift and go to state 26
    INT_TYPE        shift and go to state 27
    STRING_TYPE     shift and go to state 28
    DOUBLE_TYPE     shift and go to state 29
    FLOAT_TYPE      shift and go to state 30
    BOOL_TYPE       shift and go to state 31

    codeblock_aux                  shift and go to state 7
    codeblock                      shift and go to state 34
    empty                          shift and go to state 6
    statement                      shift and go to state 8
    function_definition            shift and go to state 9
    condition_if                   shift and go to state 10
    loop                           shift and go to state 11
    return                         shift and go to state 12
    statement_aux                  shift and go to state 13
    n_before_function_definition   shift and go to state 14
    whileloop                      shift and go to state 17
    assign                         shift and go to state 19
    declare                        shift and go to state 20
    function_call                  shift and go to state 21
    print                          shift and go to state 22
    type                           shift and go to state 24
    reference                      shift and go to state 25
    arr_reference                  shift and go to state 32

state 8

    (136) codeblock_aux -> statement .

    IF              reduce using rule 136 (codeblock_aux -> statement .)
    RETURN          reduce using rule 136 (codeblock_aux -> statement .)
    WHILE           reduce using rule 136 (codeblock_aux -> statement .)
    NAME            reduce using rule 136 (codeblock_aux -> statement .)
    PRINT           reduce using rule 136 (codeblock_aux -> statement .)
    INT_TYPE        reduce using rule 136 (codeblock_aux -> statement .)
    STRING_TYPE     reduce using rule 136 (codeblock_aux -> statement .)
    DOUBLE_TYPE     reduce using rule 136 (codeblock_aux -> statement .)
    FLOAT_TYPE      reduce using rule 136 (codeblock_aux -> statement .)
    BOOL_TYPE       reduce using rule 136 (codeblock_aux -> statement .)
    FUNCTION        reduce using rule 136 (codeblock_aux -> statement .)
    $end            reduce using rule 136 (codeblock_aux -> statement .)
    RCURLY          reduce using rule 136 (codeblock_aux -> statement .)


state 9

    (137) codeblock_aux -> function_definition .

    IF              reduce using rule 137 (codeblock_aux -> function_definition .)
    RETURN          reduce using rule 137 (codeblock_aux -> function_definition .)
    WHILE           reduce using rule 137 (codeblock_aux -> function_definition .)
    NAME            reduce using rule 137 (codeblock_aux -> function_definition .)
    PRINT           reduce using rule 137 (codeblock_aux -> function_definition .)
    INT_TYPE        reduce using rule 137 (codeblock_aux -> function_definition .)
    STRING_TYPE     reduce using rule 137 (codeblock_aux -> function_definition .)
    DOUBLE_TYPE     reduce using rule 137 (codeblock_aux -> function_definition .)
    FLOAT_TYPE      reduce using rule 137 (codeblock_aux -> function_definition .)
    BOOL_TYPE       reduce using rule 137 (codeblock_aux -> function_definition .)
    FUNCTION        reduce using rule 137 (codeblock_aux -> function_definition .)
    $end            reduce using rule 137 (codeblock_aux -> function_definition .)
    RCURLY          reduce using rule 137 (codeblock_aux -> function_definition .)


state 10

    (138) codeblock_aux -> condition_if .

    IF              reduce using rule 138 (codeblock_aux -> condition_if .)
    RETURN          reduce using rule 138 (codeblock_aux -> condition_if .)
    WHILE           reduce using rule 138 (codeblock_aux -> condition_if .)
    NAME            reduce using rule 138 (codeblock_aux -> condition_if .)
    PRINT           reduce using rule 138 (codeblock_aux -> condition_if .)
    INT_TYPE        reduce using rule 138 (codeblock_aux -> condition_if .)
    STRING_TYPE     reduce using rule 138 (codeblock_aux -> condition_if .)
    DOUBLE_TYPE     reduce using rule 138 (codeblock_aux -> condition_if .)
    FLOAT_TYPE      reduce using rule 138 (codeblock_aux -> condition_if .)
    BOOL_TYPE       reduce using rule 138 (codeblock_aux -> condition_if .)
    FUNCTION        reduce using rule 138 (codeblock_aux -> condition_if .)
    $end            reduce using rule 138 (codeblock_aux -> condition_if .)
    RCURLY          reduce using rule 138 (codeblock_aux -> condition_if .)


state 11

    (139) codeblock_aux -> loop .

    IF              reduce using rule 139 (codeblock_aux -> loop .)
    RETURN          reduce using rule 139 (codeblock_aux -> loop .)
    WHILE           reduce using rule 139 (codeblock_aux -> loop .)
    NAME            reduce using rule 139 (codeblock_aux -> loop .)
    PRINT           reduce using rule 139 (codeblock_aux -> loop .)
    INT_TYPE        reduce using rule 139 (codeblock_aux -> loop .)
    STRING_TYPE     reduce using rule 139 (codeblock_aux -> loop .)
    DOUBLE_TYPE     reduce using rule 139 (codeblock_aux -> loop .)
    FLOAT_TYPE      reduce using rule 139 (codeblock_aux -> loop .)
    BOOL_TYPE       reduce using rule 139 (codeblock_aux -> loop .)
    FUNCTION        reduce using rule 139 (codeblock_aux -> loop .)
    $end            reduce using rule 139 (codeblock_aux -> loop .)
    RCURLY          reduce using rule 139 (codeblock_aux -> loop .)


state 12

    (140) codeblock_aux -> return .

    IF              reduce using rule 140 (codeblock_aux -> return .)
    RETURN          reduce using rule 140 (codeblock_aux -> return .)
    WHILE           reduce using rule 140 (codeblock_aux -> return .)
    NAME            reduce using rule 140 (codeblock_aux -> return .)
    PRINT           reduce using rule 140 (codeblock_aux -> return .)
    INT_TYPE        reduce using rule 140 (codeblock_aux -> return .)
    STRING_TYPE     reduce using rule 140 (codeblock_aux -> return .)
    DOUBLE_TYPE     reduce using rule 140 (codeblock_aux -> return .)
    FLOAT_TYPE      reduce using rule 140 (codeblock_aux -> return .)
    BOOL_TYPE       reduce using rule 140 (codeblock_aux -> return .)
    FUNCTION        reduce using rule 140 (codeblock_aux -> return .)
    $end            reduce using rule 140 (codeblock_aux -> return .)
    RCURLY          reduce using rule 140 (codeblock_aux -> return .)


state 13

    (129) statement -> statement_aux . SEMICOLON

    SEMICOLON       shift and go to state 35


state 14

    (83) function_definition -> n_before_function_definition . FUNCTION NAME n_open_new_scope_function parameter_list DOUBLEDOT function_type LCURLY n_function_block_start codeblock RCURLY n_close_scope n_function_block_end

    FUNCTION        shift and go to state 36


state 15

    (86) function_call -> NAME . n_function_call_1 LPARENTHESIS n_function_call_2 arg_list RPARENTHESIS n_function_call_5 n_function_call_6
    (87) function_call -> NAME . n_function_call_1 LPARENTHESIS RPARENTHESIS n_function_call_6
    (119) reference -> NAME . n_variable_reference n_math_expression_1_name
    (121) arr_reference -> NAME . n_arr_reference_name LBRACKET n_left_bracket expression RBRACKET n_right_bracket n_arr_reference
    (122) arr_reference -> NAME . n_arr_reference_name LBRACKET n_left_bracket expression RBRACKET n_right_bracket LBRACKET n_left_bracket expression RBRACKET n_right_bracket n_matrix_reference
    (35) n_function_call_1 -> .
    (5) n_variable_reference -> .
    (50) n_arr_reference_name -> .

    LPARENTHESIS    reduce using rule 35 (n_function_call_1 -> .)
    EQUAL           reduce using rule 5 (n_variable_reference -> .)
    TIMES           reduce using rule 5 (n_variable_reference -> .)
    DIVIDE          reduce using rule 5 (n_variable_reference -> .)
    MODULUS         reduce using rule 5 (n_variable_reference -> .)
    PLUS            reduce using rule 5 (n_variable_reference -> .)
    MINUS           reduce using rule 5 (n_variable_reference -> .)
    GREATERTHAN     reduce using rule 5 (n_variable_reference -> .)
    LESSTHAN        reduce using rule 5 (n_variable_reference -> .)
    EQUALEQUAL      reduce using rule 5 (n_variable_reference -> .)
    LESSTHANOREQUAL reduce using rule 5 (n_variable_reference -> .)
    GREATERTHANOREQUAL reduce using rule 5 (n_variable_reference -> .)
    NOTEQUAL        reduce using rule 5 (n_variable_reference -> .)
    OR              reduce using rule 5 (n_variable_reference -> .)
    AND             reduce using rule 5 (n_variable_reference -> .)
    SEMICOLON       reduce using rule 5 (n_variable_reference -> .)
    RPARENTHESIS    reduce using rule 5 (n_variable_reference -> .)
    COMMA           reduce using rule 5 (n_variable_reference -> .)
    RBRACKET        reduce using rule 5 (n_variable_reference -> .)
    LBRACKET        reduce using rule 50 (n_arr_reference_name -> .)

    n_function_call_1              shift and go to state 37
    n_variable_reference           shift and go to state 38
    n_arr_reference_name           shift and go to state 39

state 16

    (143) condition_if -> IF . LPARENTHESIS expression RPARENTHESIS LCURLY n_two_way_conditional_1 n_open_new_scope codeblock RCURLY n_close_scope condition_else n_two_way_conditional_2

    LPARENTHESIS    shift and go to state 40


state 17

    (141) loop -> whileloop .

    IF              reduce using rule 141 (loop -> whileloop .)
    RETURN          reduce using rule 141 (loop -> whileloop .)
    WHILE           reduce using rule 141 (loop -> whileloop .)
    NAME            reduce using rule 141 (loop -> whileloop .)
    PRINT           reduce using rule 141 (loop -> whileloop .)
    INT_TYPE        reduce using rule 141 (loop -> whileloop .)
    STRING_TYPE     reduce using rule 141 (loop -> whileloop .)
    DOUBLE_TYPE     reduce using rule 141 (loop -> whileloop .)
    FLOAT_TYPE      reduce using rule 141 (loop -> whileloop .)
    BOOL_TYPE       reduce using rule 141 (loop -> whileloop .)
    FUNCTION        reduce using rule 141 (loop -> whileloop .)
    $end            reduce using rule 141 (loop -> whileloop .)
    RCURLY          reduce using rule 141 (loop -> whileloop .)


state 18
